--- a/index.html
+++ b/index.html
@@ -11,9 +11,28 @@
     <title>João Zenaro</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <div class="navbar-nav navbar-light navbar-expand-lg">
+            <ul class="navbar-nav">
+                <li><a href="" class="nav-link">Quem sou?</a></li>
+                <li><a href="" class="nav-link">Portfólio</a></li>
+                <li><a href="" class="nav-link"></a></li>
+                <li><a href="" class="nav-link"></a></li>
+            </ul>
+        </div>
+
+        <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="customSwitches">
+            <label class="custom-control-label" for="customSwitches">EN</label>
+        </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
